# TimeSand

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  quick-start.ps1  quick-start.sh
.claude/commands/: AnalysisTask.md  ReviewTask.md  UpdateProgress.md
.github/: copilot-instructions.md
.github/workflows/: pr-target-check.yml  release.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  albums.py  draw.py  music.py  photos.py  playlists.py  settings.py  slideshow.py  tags.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  album.py  music.py  photo.py
backend/app/services/: __init__.py  draw_service.py  music_service.py  photo_service.py
backend/tests/: conftest.py  test_albums.py  test_draw.py  test_health.py  test_music.py  test_photos.py  test_playlists.py  test_settings.py  test_slideshow.py  test_tags.py
docs/: dashboard.base  product-roadmap.md
docs/iterations/: overview.canvas
docs/tasks/: README.md  mvp-01-project-foundation.md  mvp-02-photo-management.md  mvp-03-album-tag-management.md  mvp-04-music-playlist.md  mvp-05-card-draw.md  mvp-06-slideshow.md  mvp-07-music-player.md  mvp-08-docker-deployment.md  mvp-09-settings-page.md  mvp-progress.md  mvp-task-plan.md
docs/templates/: spec-template.md  task-plan-template.md  task-template.md
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  test-utils.ts
sandbox/: codereview-test.md
(+140 files in other folders)
