[project]
name = "timesand-backend"
version = "0.0.1"
description = "TimeSand backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.22",
  "pillow>=11.0.0",
  "pillow-heif>=0.18.0",
  "python-multipart>=0.0.9",
  "mutagen>=1.47.0",
]

[dependency-groups]
dev = [
  "ruff>=0.9.0",
  "pytest>=8.3.0",
  "httpx>=0.28.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

